--- a/example/labelimg.html
+++ b/example/labelimg.html
@@ -3,7 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>人脸标注</title>
-
+	
+	<style>
+		#canva {
+			position: relative;
+			width: 1000px;
+			height: 600px;
+			border: 1px solid #ccc;
+		}
+	</style>
 	<link rel="stylesheet" href="labelimg.css">
 </head>
 <body>
@@ -12,7 +20,6 @@
 		<button id="next" type="button">下一题</button>	
 	</div>
 
-	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="labelimg.js"></script>
 	<script>
 		var list = [
@@ -24,7 +31,7 @@
 		]
 		var label = new Labelimg({
 			el: document.getElementById('canva'),
-			shape: 'point'
+			shape: 'rect'
 		})
 		label.addImg(list[0].imgUrl)
 		var next = document.getElementById('next');
@@ -36,18 +43,6 @@
 			} else {
 				alert('答完了')
 			}
-		}
-		// getQuestions()
-
-		var questionList = []
-		function getQuestions() {
-			$.ajax({
-				url: '/getQuestions',
-				success: function (data) {
-					console.log(data)
-					questionList = data
-				}
-			})
 		}
 	</script>
 </body>
