添加辅助线

--- a/example/labelimg.html
+++ b/example/labelimg.html
@@ -31,7 +31,7 @@
 		]
 		var label = new Labelimg({
 			el: document.getElementById('canva'),
-			shape: 'rect'
+			shape: 'point'
 		})
 		label.addImg(list[0].imgUrl)
 		var next = document.getElementById('next');
