样式完全重构； html结构渲染完成

--- a/example/labelimg.html
+++ b/example/labelimg.html
@@ -5,11 +5,16 @@
 	<title>人脸标注</title>
 	
 	<style>
+	    * { padding: 0; margin: 0; }
+		body {
+			height: 100vh;
+			background-color: #eee;
+		}
 		#canva {
-			position: relative;
-			width: 1000px;
+			width: 1200px;
 			height: 600px;
-			border: 1px solid #ccc;
+			margin: 0 auto;
+			overflow: hidden;
 		}
 	</style>
 	<link rel="stylesheet" href="labelimg.css">
