--- a/example/labelimg.html
+++ b/example/labelimg.html
@@ -27,38 +27,43 @@
 
 	<script src="labelimg.js"></script>
 	<script>
-		var list = [
-			{imgUrl: 'img/1.jpg', labeled: false},
-			{imgUrl: 'img/2.jpg', labeled: false},
-			{imgUrl: 'img/3.jpg', labeled: false},
-			{imgUrl: 'img/4.jpg', labeled: false},
-			{imgUrl: 'img/5.jpg', labeled: false}
-		]
-		var label = new Labelimg({
-			el: document.getElementById('canva'),
-			shape: 'point',
-			labelInfo: [
-				{
-					name: '左眼',
-					labels: ['可见','不可见']
-				},
-				{
-					name: '右眼',
-					labels: ['你猜','啊啊']
-				}
+		function init() {
+			'use strict'
+			var list = [
+				{imgUrl: 'img/1.jpg', labeled: false},
+				{imgUrl: 'img/2.jpg', labeled: false},
+				{imgUrl: 'img/3.jpg', labeled: false},
+				{imgUrl: 'img/4.jpg', labeled: false},
+				{imgUrl: 'img/5.jpg', labeled: false}
 			]
-		})
-		label.addImg(list[0].imgUrl)
-		var next = document.getElementById('next');
-		var curentItem = 0;
-		next.onclick = function () {
-				curentItem++;
-			if(curentItem < list.length) {
-				label.addImg(list[curentItem].imgUrl)				
-			} else {
-				alert('答完了')
+			var label = new Labelimg({
+				el: document.getElementById('canva'),
+				shape: 'point',
+				labelInfo: [
+					{
+						name: '左眼',
+						labels: ['可见','不可见']
+					},
+					{
+						name: '右眼',
+						labels: ['你猜','啊啊']
+					}
+				]
+			})
+			label.addImg(list[0].imgUrl)
+			var next = document.getElementById('next');
+			var curentItem = 0;
+			next.onclick = function () {
+					curentItem++;
+				if(curentItem < list.length) {
+					label.addImg(list[curentItem].imgUrl)				
+				} else {
+					alert('答完了')
+				}
 			}
 		}
+		init()
 	</script>
 </body>
 </html>
+			
